--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/misclicked-events:latest
+          tags: ghcr.io/${{ github.repository_owner || github.actor }}/misclicked-events:latest
